==> PX4/PX4-Autopilot/nuttx/arch/arm/src/lpc17xx/lpc17_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <wdog.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/i2c.h>
#include <arch/irq.h>
#include <arch/board/board.h>
#include "up_arch.h"
#include "up_internal.h"
#include "os_internal.h"
#include "chip.h"
#include "chip/lpc17_syscon.h"
#include "lpc17_gpio.h"
#include "lpc17_i2c.h"
 #define GPIO_I2C1_SCL GPIO_I2C1_SCL_1
 #define GPIO_I2C1_SDA GPIO_I2C1_SDA_1
 #define CONFIG_I2C0_FREQ 100000
 #define CONFIG_I2C1_FREQ 100000
 #define CONFIG_I2C2_FREQ 100000
#define I2C_TIMEOUT     ((20 * CLK_TCK) / 1000) /* 20 mS */

static uint32_t i2c_setfrequency(FAR struct i2c_dev_s *dev, uint32_t frequency)
{
  struct lpc17_i2cdev_s *priv = (struct lpc17_i2cdev_s *) dev;

  if (frequency > 100000)
    {
      /* asymetric per 400Khz I2C spec */

      putreg32(LPC17_CCLK / (83 + 47) * 47 / frequency, priv->base + LPC17_I2C_SCLH_OFFSET);
      putreg32(LPC17_CCLK / (83 + 47) * 83 / frequency, priv->base + LPC17_I2C_SCLL_OFFSET);
    }
  else
    {
      /* 50/50 mark space ratio */

      putreg32(LPC17_CCLK / 100 * 50 / frequency, priv->base + LPC17_I2C_SCLH_OFFSET);
      putreg32(LPC17_CCLK / 100 * 50 / frequency, priv->base + LPC17_I2C_SCLL_OFFSET);
    }

  /* FIXME: This function should return the actual selected frequency */

  return frequency;
}

static int i2c_setaddress(FAR struct i2c_dev_s *dev, int addr, int nbits)
{
  struct lpc17_i2cdev_s *priv = (struct lpc17_i2cdev_s *) dev;

  DEBUGASSERT(dev != NULL);
  DEBUGASSERT(nbits == 7 );

  priv->msg.addr  = addr<<1;
  priv->msg.flags = 0 ;

  return OK;
}

static int i2c_write(FAR struct i2c_dev_s *dev, const uint8_t *buffer, int buflen)
{
  struct lpc17_i2cdev_s *priv = (struct lpc17_i2cdev_s *) dev;
  int ret;

  DEBUGASSERT(dev != NULL);

  priv->wrcnt = 0;
  priv->rdcnt = 0;
  priv->msg.addr &= ~0x01;
  priv->msg.buffer = (uint8_t*)buffer;
  priv->msg.length = buflen;
  
  ret = i2c_start(priv);

  return ret > 0 ? OK : -ETIMEDOUT;
}

static int i2c_read(FAR struct i2c_dev_s *dev, uint8_t *buffer, int buflen)
{
  struct lpc17_i2cdev_s *priv = (struct lpc17_i2cdev_s *) dev;
  int ret;

  DEBUGASSERT(dev != NULL);

  priv->wrcnt = 0;
  priv->rdcnt = 0;
  priv->msg.addr |= 0x01;
  priv->msg.buffer = buffer;
  priv->msg.length = buflen;

  ret = i2c_start(priv);

  return ret > 0 ? OK : -ETIMEDOUT;
}

struct i2c_dev_s *up_i2cinitialize(int port)
{
  struct lpc17_i2cdev_s *priv;
  irqstate_t flags;
  uint32_t regval;

  if (port > 2)
    {
      dbg("lpc I2C Only support 0,1,2\n");
      return NULL;
    }

  flags = irqsave();

  priv= &i2cdevices[port];
#ifdef CONFIG_LPC17_I2C0
  if (port == 0)
    {
      priv= (FAR struct lpc17_i2cdev_s *)&i2cdevices[0];
      priv->base  = LPC17_I2C0_BASE;
      priv->irqid = LPC17_IRQ_I2C0;

      regval  = getreg32(LPC17_SYSCON_PCONP);
      regval |= SYSCON_PCONP_PCI2C0;
      putreg32(regval, LPC17_SYSCON_PCONP);

      regval  = getreg32(LPC17_SYSCON_PCLKSEL0);
      regval &= ~SYSCON_PCLKSEL0_I2C0_MASK;
      regval |= (SYSCON_PCLKSEL_CCLK << SYSCON_PCLKSEL0_I2C0_SHIFT);
      putreg32(regval, LPC17_SYSCON_PCLKSEL0);
        
      lpc17_configgpio(GPIO_I2C0_SCL);
      lpc17_configgpio(GPIO_I2C0_SDA);
        
      putreg32(LPC17_CCLK/CONFIG_I2C0_FREQ/2, priv->base + LPC17_I2C_SCLH_OFFSET);
      putreg32(LPC17_CCLK/CONFIG_I2C0_FREQ/2, priv->base + LPC17_I2C_SCLL_OFFSET);
    }
  else
#endif
#ifdef CONFIG_LPC17_I2C1
  if (port == 1)
    {
      priv= (FAR struct lpc17_i2cdev_s *)&i2cdevices[1];
      priv->base  = LPC17_I2C1_BASE;
      priv->irqid = LPC17_IRQ_I2C1;

      regval  = getreg32(LPC17_SYSCON_PCONP);
      regval |= SYSCON_PCONP_PCI2C1;
      putreg32(regval, LPC17_SYSCON_PCONP);

      regval  = getreg32(LPC17_SYSCON_PCLKSEL1);
      regval &= ~SYSCON_PCLKSEL1_I2C1_MASK;
      regval |= (SYSCON_PCLKSEL_CCLK << SYSCON_PCLKSEL1_I2C1_SHIFT);
      putreg32(regval, LPC17_SYSCON_PCLKSEL1);

      lpc17_configgpio(GPIO_I2C1_SCL);
      lpc17_configgpio(GPIO_I2C1_SDA);

      putreg32(LPC17_CCLK/CONFIG_I2C1_FREQ/2, priv->base + LPC17_I2C_SCLH_OFFSET);
      putreg32(LPC17_CCLK/CONFIG_I2C1_FREQ/2, priv->base + LPC17_I2C_SCLL_OFFSET);
    }
  else
#endif
#ifdef CONFIG_LPC17_I2C2
  if (port == 2)
    {
      priv= (FAR struct lpc17_i2cdev_s *)&i2cdevices[2];
      priv->base  = LPC17_I2C2_BASE;
      priv->irqid = LPC17_IRQ_I2C2;

      regval  = getreg32(LPC17_SYSCON_PCONP);
      regval |= SYSCON_PCONP_PCI2C2;
      putreg32(regval, LPC17_SYSCON_PCONP);

      regval  = getreg32(LPC17_SYSCON_PCLKSEL1);
      regval &= ~SYSCON_PCLKSEL1_I2C2_MASK;
      regval |= (SYSCON_PCLKSEL_CCLK << SYSCON_PCLKSEL1_I2C2_SHIFT);
      putreg32(regval, LPC17_SYSCON_PCLKSEL1);
        
      lpc17_configgpio(GPIO_I2C2_SCL);
      lpc17_configgpio(GPIO_I2C2_SDA);
        
      putreg32(LPC17_CCLK/CONFIG_I2C2_FREQ/2, priv->base + LPC17_I2C_SCLH_OFFSET);
      putreg32(LPC17_CCLK/CONFIG_I2C2_FREQ/2, priv->base + LPC17_I2C_SCLL_OFFSET);
    }
  else
#endif
    {
      return NULL;
    }

  putreg32(I2C_CONSET_I2EN, priv->base+LPC17_I2C_CONSET_OFFSET);

  sem_init(&priv->mutex, 0, 1);
  sem_init(&priv->wait, 0, 0);

  /* Allocate a watchdog timer */

  priv->timeout = wd_create();
  DEBUGASSERT(priv->timeout != 0);

  /* Attach Interrupt Handler */

  irq_attach(priv->irqid, i2c_interrupt);

  /* Enable Interrupt Handler */

  up_enable_irq(priv->irqid);

  /* Install our operations */

  priv->dev.ops = &lpc17_i2c_ops;
  return &priv->dev;
}

int up_i2cuninitialize(FAR struct i2c_dev_s * dev)
{
  struct lpc17_i2cdev_s *priv = (struct lpc17_i2cdev_s *) dev;
  
  /* Disable I2C */

  putreg32(I2C_CONCLRT_I2ENC, priv->base+LPC17_I2C_CONCLR_OFFSET);

  /* Reset data structures */

  sem_destroy(&priv->mutex);
  sem_destroy(&priv->wait);

  /* Free the watchdog timer */

  wd_delete(priv->timeout);
  priv->timeout = NULL;

  /* Disable interrupts */

  up_disable_irq(priv->irqid);

  /* Detach Interrupt Handler */

  irq_detach(priv->irqid);
  return OK;
}
